# pandix

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: lib.rs  tick.rs
context/: Cargo.toml
context/src/: canvas.rs  input.rs  keyboard.rs  lib.rs
context/tests/: input.rs
core/: Cargo.toml
core/src/: asset_management.rs  engine.rs  lib.rs  scene.rs  scene_management.rs  sprite_management.rs  tick.rs
core/src/component/: sprite.rs  transform.rs
core/src/resource/: mod.rs  scene_management.rs  scene_state.rs
ecs/: Cargo.toml
ecs/src/: lib.rs
engine/: Cargo.toml
engine/src/: engine.rs  lib.rs  scene.rs
engine/src/resource/: mod.rs
engine/src/system/: mod.rs  renderer.rs  transform.rs
examples/: main.rs  playground.rs  sandbox.rs
examples/assets/shaders/: simple_color.frag.glsl  simple_color.vert.glsl
graphic/: Cargo.toml
graphic/src/: api.rs  camera.rs  cube_map.rs  index_buffer.rs  lib.rs  program.rs  shader.rs  texture.rs  vertex_array.rs
graphic/src/data_buffer/: buffer_element.rs  mod.rs
math/: Cargo.toml
math/src/: lib.rs  mat2.rs  mat2d.rs  mat3.rs  mat4.rs  quat.rs  vec2.rs  vec3.rs  vec4.rs
math/tests/: mat2-test.rs  mat2d-test.rs  mat3-test.rs  mat4-test.rs  quat-test.rs  vec2-test.rs  vec2.rs  vec3-test.rs  vec4-test.rs
playground/: Cargo.toml
playground/src/: lib.rs
src/: lib.rs  main.rs
