[package]
name = "pandix"
version = "0.0.1"
authors = ["Alexander Bifulco"]
edition = "2018"

[workspace]
members = [
    "math",
    "graphic",
    "common",
    "context",
    "engine"
]

[dependencies]
engine = { path = "engine" }
math = { path = "math" }

[dev-dependencies]
graphic = { path = "graphic" }
common = { path = "common" }
context = { path = "context" }
