[package]
name = "pandix"
version = "0.0.1"
authors = ["Alexander Bifulco"]
edition = "2018"

[workspace]
members = [
    "math",
    "graphic",
    "common",
    "context",
    "engine",
    "ecs",
    "playground"
]

[dependencies]
engine = { path = "engine" }
ecs = { path = "ecs" }
math = { path = "math" }
graphic = { path = "graphic" }
common = { path = "common" }
context = { path = "context" }
playground = { path = "playground" }
