[package]
name = "pandix"
version = "0.0.1"
authors = ["Alexander Bifulco"]
edition = "2018"

[workspace]
members = [
    "core",
    "math",
    "graphic",
    "common",
    "context",
    "ecs"
]

[dependencies]
core = { path = "core" }
ecs = { path = "ecs" }
math = { path = "math" }
graphic = { path = "graphic" }
common = { path = "common" }
context = { path = "context" }
